--- a/mainapp/templates/mainapp/register.html
+++ b/mainapp/templates/mainapp/register.html
@@ -8,7 +8,7 @@
 <form id="fm-signin">
   <div class="row justify-content-center">
     <div class="form-group col-9">
-      <input type="username" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="输入用户名">
+      <input type="username" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="用户名">
     </div>
   </div>
   <div class="row justify-content-center">
