--- a/mainapp/templates/mainapp/login.html
+++ b/mainapp/templates/mainapp/login.html
@@ -4,7 +4,7 @@
   <img src="/static/img/logo.jpg" id="logo" alt width="72" height="72">
   <p class="lead" id="brandname">Python与数据分析</p>
 </div>
-<h3 class="text-center text-primary" id="title">有奖竞答</h3>
+<h1 class="text-center" id="title">有奖竞答</h1>
 <form id="fm-signin">
   <div class="row justify-content-center">
     <div class="form-group col-9">
