--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -29,6 +29,7 @@
 
 #title {
     margin-top: 4rem;
+    color: #FF5C0D;
 }
 
 #fm-signin {
@@ -64,13 +65,37 @@
 
 #scorebar {
     background-color: #F4540D;
+    width: 10rem;
     height: 3rem;
     color: #FFFFFF;
-    font-weight: 400;
+    font-weight: 500;
+    padding-left: 1.5rem;
 }
 
-#question {
-    height: 20rem;
+#score-label {
+    line-height: 3rem;
+    vertical-align: middle;
+}
+
+#score-num {
+    line-height: 3rem;
+    vertical-align: middle;
+}
+
+#question-card {
+    height: 30rem;
+}
+
+#clock {
+    width: 2.5rem;
+    height: 2.5rem;
+    border: 2px solid #17a2b8!important;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
+    text-align: center;
+    font-size: 1.2rem;
+    padding-top: 0.3rem;
 }
 
 #options {
