update prize page

--- a/mainapp/templates/mainapp/questions.html
+++ b/mainapp/templates/mainapp/questions.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row" style="margin-top: 2rem;">
   <div id="scorebar">
-   <span id="score-label">本轮积分</span>
+   <span id="score-label">本局积分</span>
    <span id="score-num">1000</span>
   </div>
 </div>
