--- a/mainapp/templates/mainapp/answer_result.html
+++ b/mainapp/templates/mainapp/answer_result.html
@@ -13,7 +13,7 @@
     </div>
     <hr class="col-9" style="margin-top:2rem;"/>
     <div style="margin-top:2rem;">
-      <a href="" role="button" class="btn btn-outline-primary rounded-pill">继续答题</a>
+      <a href="{% url 'questions' %}" role="button" class="btn btn-outline-primary rounded-pill">继续答题</a>
       <a href="" role="button" class="btn btn-outline-primary rounded-pill">查看排行榜</a>
     </div>
   </div>
