--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -139,5 +139,18 @@
 }
 
 #myrank {
-    height: 3rem;
+    color: #aaaaaa!important;
+    font-size: 0.9rem;
+}
+
+#myscore {
+}
+
+.top-header {
+    height: 1.8rem;
+    color: #aaaaaa!important;
+    font-size: 0.9rem;
+}
+.top-item {
+    height: 2.2rem;
 }
