--- a/mainapp/templates/mainapp/prize.html
+++ b/mainapp/templates/mainapp/prize.html
@@ -1,6 +1,6 @@
 {% extends 'mainapp/base.html' %}
 {% block content %}
-<div class="row justify-content-center" style="margin-top: 5rem;">
+<div class="row justify-content-center my-5" >
   <div class="text-center col-9">
     <p>前三名可获得精美奖品，奖品如下：</p>
     <p class="lead" style="margin-top: 3rem;">第一名</p>
