--- a/mainapp/templates/mainapp/questions.html
+++ b/mainapp/templates/mainapp/questions.html
@@ -1,12 +1,12 @@
 {% extends 'mainapp/base.html' %}
 {% block content %}
-<div class="row" style="margin-top: 2rem;">
+<div class="row mt-4">
   <div id="scorebar">
    <span id="score-label">本局积分</span>
    <span id="score-num">1000</span>
   </div>
 </div>
-<div class="row justify-content-center" style="margin-top: 3rem;">
+<div class="row justify-content-center mt-5">
   <div class="col-10">
     <div class="card shadow">
       <div class="card-body" id="question-card">
