--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -9,12 +9,21 @@
 <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 <link rel="stylesheet" href="/static/css/stylesheet.css">
 <script src="/static/js/jquery-3.3.1.min.js"></script>
+<script src="/static/js/js.cookie.js"></script>
+<script src="/static/js/jquery.djangocsrf.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/login.js"></script>
 </head>
 <body>
 <div class="container">
   {% block content %}
   {% endblock %}
 </div>
+<script>
+    $(document).ready(function(){
+        $.djangocsrf( "enable" );
+        login.init();
+    });
+</script>
 </body>
 </html>
