--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -10,9 +10,10 @@
 <link rel="stylesheet" href="/static/css/stylesheet.css">
 <script src="/static/js/jquery-3.3.1.min.js"></script>
 <script src="/static/js/js.cookie.js"></script>
-<script src="/static/js/jquery.djangocsrf.js"></script>
+<script src="/static/js/util.js"></script>
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/login.js"></script>
+<script src="/static/js/register.js"></script>
 </head>
 <body>
 <div class="container">
@@ -21,8 +22,8 @@
 </div>
 <script>
     $(document).ready(function(){
-        $.djangocsrf( "enable" );
         login.init();
+        register.init();
     });
 </script>
 </body>
