--- a/mainapp/templates/mainapp/login.html
+++ b/mainapp/templates/mainapp/login.html
@@ -5,17 +5,17 @@
   <p class="lead" id="brandname">Python与数据分析</p>
 </div>
 <h1 class="text-center" id="title">有奖竞答</h1>
-<form id="fm-signin">
+<form id="fm-signin">{% csrf_token %}
   <div class="row justify-content-center">
     <div class="form-group col-9">
-      <input type="username" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="用户名" onkeydown="login.update_username(event)">
-      <div id="username-err">err</div>
+      <input type="username" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="用户名" onchange="login.update_username(event)">
+      <div id="username-err"></div>
     </div>
   </div>
   <div class="row justify-content-center">
     <div class="form-group col-9">
-      <input type="password" class="form-control" id="password" placeholder="密码" onkeydown="login.update_password(event)">
-      <div id="password-err">err</div>
+      <input type="password" class="form-control" id="password" placeholder="密码" onchange="login.update_password(event)">
+      <div id="password-err"></div>
     </div>
   </div>
   <div class="row justify-content-center">
@@ -32,7 +32,7 @@
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="login-model-label" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
-      <div class="modal-body" id="login-modal-body"></div>
+      <div class="modal-body text-center" id="login-modal-body"></div>
  	<div>
   </div>
 </div>
