--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -14,6 +14,7 @@
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/login.js"></script>
 <script src="/static/js/register.js"></script>
+<script src="/static/js/questions.js"></script>
 </head>
 <body>
 <div class="container">
@@ -24,6 +25,7 @@
     $(document).ready(function(){
         login.init();
         register.init();
+        questions.init();
     });
 </script>
 </body>
