--- a/mainapp/templates/mainapp/questions.html
+++ b/mainapp/templates/mainapp/questions.html
@@ -10,6 +10,15 @@
   <div class="col-10">
     <div class="card shadow">
       <div class="card-body" id="question-card">
+        <div clas="rounded-circle" id="prepare">3</div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row justify-content-center mt-5">
+  <div class="col-10">
+    <div class="card shadow">
+      <div class="card-body" id="question-card">
         <div class="rounded-circle" id="clock">10</div>
         <p class="card-text text-center">1. Python之父是哪个国家的人？</p>
         <p class="text-center"><span class="badge badge-pill badge-primary">100分</span></p>
