transition from question to result

--- a/mainapp/templates/mainapp/login.html
+++ b/mainapp/templates/mainapp/login.html
@@ -33,7 +33,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-body text-center" id="login-modal-body"></div>
- 	<div>
+ 	</div>
   </div>
 </div>
 {% endblock %}
