--- a/mainapp/templates/mainapp/register.html
+++ b/mainapp/templates/mainapp/register.html
@@ -39,7 +39,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-body text-center" id="reg-modal-body"></div>
- 	<div>
+ 	</div>
   </div>
 </div>
 {% endblock %}
