--- a/mainapp/templates/mainapp/questions.html
+++ b/mainapp/templates/mainapp/questions.html
@@ -1,34 +1,56 @@
 {% extends 'mainapp/base.html' %}
 {% block content %}
-<div class="row mt-4">
-  <div id="scorebar">
-   <span id="score-label">本局积分</span>
-   <span id="score-num">1000</span>
+<div id="qstn">
+  <div class="row mt-4">
+    <div id="scorebar">
+     <span id="score-label">本局积分</span>
+     <span id="score-num">0</span>
+    </div>
   </div>
-</div>
-<div class="row justify-content-center mt-5">
-  <div class="col-10">
-    <div class="card shadow">
-      <div class="card-body" id="question-card">
-        <div clas="rounded-circle" id="prepare">3</div>
+  
+  <div class="row justify-content-center mt-5">
+    <div class="col-10">
+      <div class="card shadow">
+        <div class="card-body" id="question-card">
+          <div id="prepare"></div>
+          <div id="qstn-opts">
+            <div class="rounded-circle" id="qstn-clock"></div>
+            <p class="card-text text-center" id="qstn-content"></p>
+            <p class="text-center"><span class="badge badge-pill badge-primary" id="qstn-score"></span></p>
+            <div id="options">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- modal -->
+  <div class="modal fade" id="qstn-modal" tabindex="-1" role="dialog" aria-labelledby="qstn-model-label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-body text-center" id="qstn-modal-body"></div>
       </div>
     </div>
   </div>
 </div>
-<div class="row justify-content-center mt-5">
-  <div class="col-10">
-    <div class="card shadow">
-      <div class="card-body" id="question-card">
-        <div class="rounded-circle" id="clock">10</div>
-        <p class="card-text text-center">1. Python之父是哪个国家的人？</p>
-        <p class="text-center"><span class="badge badge-pill badge-primary">100分</span></p>
-        <div id="options">
-          <div class="border border-secondary rounded-pill opt-content">A. 中国</div>
-          <div class="border border-secondary rounded-pill opt-content">B. 美国</div>
-          <div class="border border-secondary rounded-pill opt-content">C. 法国</div>
-          <div class="border border-secondary rounded-pill opt-content">D. 荷兰</div>
-        </div>
-      </div>
+
+<div class="row justify-content-center" id="aswr-rslt">
+  <div class="text-center col-9">
+    <div id="round-result">
+      <h2>本局结束</h2>
+      <p class="mt-5">本局共获得积分</p>
+      <p id="aswr-score-num"></p>
+      <p id="total-score">当前总积分 <span id="total-score-num">2000</span></p>
+    </div>
+    <div id="invite">
+      <a href="" role="button" class="btn btn-primary rounded-pill btn-lg" id="btn-invite">邀请好友</a>
+      <p id="invite-tip"><small>每邀请一位好友可额外获得100积分</small></p>
+    </div>
+    <hr class="col-9 mt-3"/>
+    <div style="mt-3">
+      <a href="{% url 'questions' %}" role="button" class="btn btn-outline-primary rounded-pill">继续答题</a>
+      <a href="" role="button" class="btn btn-outline-primary rounded-pill">查看排行榜</a>
     </div>
   </div>
 </div>
