--- a/mainapp/templates/mainapp/questions.html
+++ b/mainapp/templates/mainapp/questions.html
@@ -53,5 +53,14 @@
       <a href="" role="button" class="btn btn-outline-primary rounded-pill">查看排行榜</a>
     </div>
   </div>
+
+  <!-- modal -->
+  <div class="modal fade" id="aswrrslt-modal" tabindex="-1" role="dialog" aria-labelledby="aswrrslt-model-label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-body text-center" id="aswrrslt-modal-body"></div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
