--- a/mainapp/templates/mainapp/leaderboard.html
+++ b/mainapp/templates/mainapp/leaderboard.html
@@ -6,13 +6,13 @@
       <p class="lead text-center">我的排名</p>
       <div class="row border-top border-bottom">
         <div class="col-7 my-1">
-          <div><span>shenzhongqiang</span></div>
-          <div id="myrank"><span>排名: </span><span>30</span></div>
+          <div><span>{{ my_username }}</span></div>
+          <div id="myrank"><span>排名: </span><span>{{ my_rank }}</span></div>
         </div>
         <div class="col-5 my-1 text-primary" id="myscore" style="font-size: 1.2rem;">
           <div class="my-2 border-left text-center">
             <span>总分: </span>
-            <span>280</span>
+            <span>{{ my_score }}</span>
           </div>
         </div>
       </div>
@@ -23,36 +23,11 @@
       <div class="row border-bottom top-header">
         <div class="col-2"></div><div class="col-6">用户</div><div class="col-4">总分</div>
       </div>
+      {% for u in leaders %}
       <div class="row border-bottom top-item py-1">
-        <div class="col-2">1</div><div class="col-6">wang</div><div class="col-4">100000</div>
+        <div class="col-2">{{ forloop.counter }}</div><div class="col-6">{{ u.username }}</div><div class="col-4">{{ u.score }}</div>
       </div>
-      <div class="row border-bottom top-item py-1">
-        <div class="col-2">2</div><div class="col-6">wang</div><div class="col-4">1000</div>
-      </div>
-      <div class="row border-bottom top-item py-2">
-        <div class="col-2">3</div><div class="col-6">wang</div><div class="col-4">1000</div>
-      </div>
-      <div class="row border-bottom top-item py-2">
-        <div class="col-2">4</div><div class="col-6">wang</div><div class="col-4">1000</div>
-      </div>
-      <div class="row border-bottom top-item py-2">
-        <div class="col-2">5</div><div class="col-6">wang</div><div class="col-4">1000</div>
-      </div>
-      <div class="row border-bottom top-item py-2">
-        <div class="col-2">6</div><div class="col-6">wang</div><div class="col-4">1000</div>
-      </div>
-      <div class="row border-bottom top-item py-2">
-        <div class="col-2">7</div><div class="col-6">wang</div><div class="col-4">1000</div>
-      </div>
-      <div class="row border-bottom top-item py-2">
-        <div class="col-2">8</div><div class="col-6">wang</div><div class="col-4">1000</div>
-      </div>
-      <div class="row border-bottom top-item py-2">
-        <div class="col-2">9</div><div class="col-6">wang</div><div class="col-4">1000</div>
-      </div>
-      <div class="row border-bottom top-item py-2">
-        <div class="col-2">10</div><div class="col-6">wang</div><div class="col-4">1000</div>
-      </div>
+      {% endfor %}
     </div>
 
 
