--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -148,11 +148,14 @@
 
 .opt-content {
     margin-top: 1rem;
-    border-color: #dddddd!important;
     height: 3rem;
     padding-left: 1.5rem;
     vertical-align: middle;
     line-height: 3rem;
+}
+
+.border-grey {
+    border-color: #dddddd!important;
 }
 
 #aswr-score-num {
