--- a/mainapp/templates/mainapp/questions.html
+++ b/mainapp/templates/mainapp/questions.html
@@ -50,7 +50,7 @@
     <hr class="col-9 mt-3"/>
     <div style="mt-3">
       <a href="{% url 'questions' %}" role="button" class="btn btn-outline-primary rounded-pill">继续答题</a>
-      <a href="" role="button" class="btn btn-outline-primary rounded-pill">查看排行榜</a>
+      <a href="{% url 'leaderboard' %}" role="button" class="btn btn-outline-primary rounded-pill">查看排行榜</a>
     </div>
   </div>
 
