update prize page

--- a/mainapp/templates/mainapp/prize.html
+++ b/mainapp/templates/mainapp/prize.html
@@ -2,14 +2,14 @@
 {% block content %}
 <div class="row justify-content-center my-5" >
   <div class="text-center col-9">
-    <p>前三名可获得精美奖品，奖品如下：</p>
-    <p class="lead" style="margin-top: 3rem;">第一名</p>
-    <p class="prize-detail">自选图书 x 2，茶包 x 1</p>
-    <p class="lead" style="margin-top: 2rem;">第二名</p>
-    <p class="prize-detail">自选图书 x 2，茶包 x 1</p>
-    <p class="lead" style="margin-top: 2rem;">第三名</p>
-    <p class="prize-detail">茶包 x 1</p>
-    <p id="sponsor-info">本活动图书由<strong>图灵教育出版社</strong>赞助，茶包由<strong>程序员茶</strong>赞助。感谢图灵教育出版社和程序员茶的鼎力支持。</p>
+    <p>得分最高的前二名可获得精美图书。</p>
+    <p><strong>第一名</strong>可从下面书单中自选2本，<strong>第二名</strong>可自选1本</p>
+    <p>本期活动所有图书由<strong>图灵教育出版社</strong>赞助，本期图书如下：</p>
+    <div><img src="/static/img/20190302/1.jpg" class="mx-auto d-block col-10"></div>
+    <div><img src="/static/img/20190302/2.jpg" class="mx-auto d-block col-10"></div>
+    <div><img src="/static/img/20190302/3.jpg" class="mx-auto d-block col-10"></div>
+    <div><img src="/static/img/20190302/4.jpg" class="mx-auto d-block col-10"></div>
+    <div><img src="/static/img/20190302/5.jpg" class="mx-auto d-block col-10"></div>
   </div>
 </div>
 {% endblock %}
