finish invite page

--- a/mainapp/templates/mainapp/prize.html
+++ b/mainapp/templates/mainapp/prize.html
@@ -5,11 +5,11 @@
     <p>得分最高的前二名可获得精美图书。</p>
     <p><strong>第一名</strong>可从下面书单中自选2本，<strong>第二名</strong>可自选1本</p>
     <p>本期活动所有图书由<strong>图灵教育出版社</strong>赞助，本期图书如下：</p>
-    <div><img src="/static/img/20190302/1.jpg" class="mx-auto d-block col-10"></div>
-    <div><img src="/static/img/20190302/2.jpg" class="mx-auto d-block col-10"></div>
-    <div><img src="/static/img/20190302/3.jpg" class="mx-auto d-block col-10"></div>
-    <div><img src="/static/img/20190302/4.jpg" class="mx-auto d-block col-10"></div>
-    <div><img src="/static/img/20190302/5.jpg" class="mx-auto d-block col-10"></div>
+    <div><img src="/static/img/book/20190302/1.jpg" class="mx-auto d-block col-10"></div>
+    <div><img src="/static/img/book/20190302/2.jpg" class="mx-auto d-block col-10"></div>
+    <div><img src="/static/img/book/20190302/3.jpg" class="mx-auto d-block col-10"></div>
+    <div><img src="/static/img/book/20190302/4.jpg" class="mx-auto d-block col-10"></div>
+    <div><img src="/static/img/book/20190302/5.jpg" class="mx-auto d-block col-10"></div>
   </div>
 </div>
 {% endblock %}
