--- a/mainapp/templates/mainapp/leaderboard.html
+++ b/mainapp/templates/mainapp/leaderboard.html
@@ -32,7 +32,7 @@
 
 
     <div class="text-center my-4">
-      <a href="{% url 'questions' %}" role="button" class="btn btn-outline-primary rounded-pill">继续答题</a>
+      <a href="{% url 'menu' %}" role="button" class="btn btn-outline-primary rounded-pill">返回菜单</a>
       <a href="/invite" role="button" class="btn btn-outline-primary rounded-pill">邀请好友</a>
     </div>
   </div>
