--- a/mainapp/templates/mainapp/prize.html
+++ b/mainapp/templates/mainapp/prize.html
@@ -11,6 +11,11 @@
     <div><img src="/static/img/book/20190302/4.jpg" class="mx-auto d-block col-10"></div>
     <div><img src="/static/img/book/20190302/5.jpg" class="mx-auto d-block col-10"></div>
   </div>
+
+  <div class="text-center col-9 my-4">
+    <a href="{% url 'menu' %}" role="button" class="btn btn-outline-primary rounded-pill">返回菜单</a>
+    <a href="/invite" role="button" class="btn btn-outline-primary rounded-pill">邀请好友</a>
+  </div>
 </div>
 {% endblock %}
 
