fix invite page

--- a/mainapp/templates/mainapp/menu.html
+++ b/mainapp/templates/mainapp/menu.html
@@ -18,7 +18,7 @@
   </div>
   <div class="row justify-content-center">
     <div class="text-center col-9">
-      <a href="{% url 'prize' %}" role="button" class="btn btn-primary rounded-pill col-10 menu-btn" id="btn-prize">规则与奖品</a>
+      <a href="{% url 'invite' %}" role="button" class="btn btn-primary rounded-pill col-10 menu-btn" id="btn-invite">邀请好友</a>
     </div>
   </div>
   <hr class="col-9" id="menu-split" />
