--- a/mainapp/templates/mainapp/invite.html
+++ b/mainapp/templates/mainapp/invite.html
@@ -1,29 +1,10 @@
 {% extends 'mainapp/base.html' %}
 {% block content %}
-<div class="row justify-content-center" style="margin-top: 4rem;">
-  <div class="text-center col-10">
-    <img src="/static/img/cardbg/skyler-smith-113650-unsplash.jpg" class="rounded-circle w-50" />
-  </div>
-  <div class="text-center col-10" style="margin-top: 5rem;">
-    <p>我在参加 <img src="/static/img/logo.jpg" class="rounded-circle" style="width: 1rem;" /> Python与数据分析 <strong>有奖竞答</strong></p>
-    <p class="font-weight-bold" style="font-size: 1.5rem;">答题学技术，还能赢取经典技术书籍</p>
-    <p>赶快和我一起吧！</p>
-  </div>
-
-  <div class="text-center offset-1 col-10 mt-4 clearfix">
-    <div class="float-right font-weight-light font-italic text-white"><small>by.{{ username }}</small></div>
-  </div>
-</div>
-
-<hr/>
-<div class="row justify-content-center mb-4">
-  <div class="col-12">
-    <div class="float-left col-6">
-      <div style="color: #FF5C0D; margin-top: 0.4rem;">有奖竞答</div>
-      <div class="text-muted" style="font-size: 0.8rem; margin-top:0.8rem">长按扫码<br/>
-      开启你的答题之旅</div>
-    </div>
-    <!--<div class="float-right col-4"><img src="{{ invite_qrcode }}" class="w-100" /></div> -->
+<div class="row justify-content-center">
+  <div class="text-center col-12 mt-5">
+    <p class="lead">邀请好友可获得积分，每邀请一人加200积分</p>
+    <p class="lead">长按页面发送邀请给好友</p>
+    <img src="/static/img/invite_card/{{ user.username }}.png" class="img-fluid">
   </div>
 </div>
 {% endblock %}
