--- a/mainapp/templates/mainapp/invite.html
+++ b/mainapp/templates/mainapp/invite.html
@@ -1,9 +1,9 @@
 {% extends 'mainapp/base.html' %}
 {% block content %}
 <div class="row justify-content-center">
-  <div class="text-center col-12 mt-5">
-    <p class="lead">邀请好友可获得积分，每邀请一人加200积分</p>
-    <p class="lead">长按页面发送邀请给好友</p>
+  <div class="text-center col-10 mt-5">
+    <p>邀请好友可获得积分，每邀请一人加<strong>200积分</strong></p>
+    <p>长按页面发送邀请给好友</p>
     <img src="/static/img/invite_card/{{ user.username }}.png" class="img-fluid">
   </div>
 </div>
