--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -111,13 +111,13 @@
 }
 
 #question-card {
-    height: 30rem;
+    height: 36rem;
 }
 
 #prepare {
     font-size: 6rem;
     text-align: center;
-    margin-top: 9rem;
+    margin-top: 12rem;
     width: 5rem;
     height: 5rem;
     margin-left: auto;
@@ -148,10 +148,13 @@
 
 .opt-content {
     margin-top: 1rem;
-    height: 3rem;
+    min-height: 3.5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     padding-left: 1.5rem;
+    padding-right: 1.5rem;
     vertical-align: middle;
-    line-height: 3rem;
+    line-height: 1.5rem;
 }
 
 .border-grey {
