--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -6,8 +6,12 @@
 <title>
 有奖竞答
 </title>
+{% load compress %}
+{% compress css %}
 <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 <link rel="stylesheet" href="/static/css/stylesheet.css">
+{% endcompress %}
+{% compress js %}
 <script src="/static/js/jquery-3.3.1.min.js"></script>
 <script src="/static/js/js.cookie.js"></script>
 <script src="/static/js/util.js"></script>
@@ -15,6 +19,7 @@
 <script src="/static/js/login.js"></script>
 <script src="/static/js/register.js"></script>
 <script src="/static/js/questions.js"></script>
+{% endcompress %}
 </head>
 <body>
 <div class="container">
